--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = { version = "0.8.4", features = ["http1"] }
+tokio = { version = "1.45.1", features = ["full"] }
+tower = "0.5.2"
+hyper = "1.6.0"
+tracing-subscriber = "0.3.19"
+tracing = "0.1.41"
+tower-http = { version = "0.6.4", features = ["trace"] }
