--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ hyper = "1.6.0"
 tracing-subscriber = "0.3.19"
 tracing = "0.1.41"
 tower-http = { version = "0.6.4", features = ["trace"] }
+postgres = "0.19.10"
+tokio-postgres = "0.7.13"
