--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tracing = "0.1.41"
 tower-http = { version = "0.6.4", features = ["trace"] }
 postgres = "0.19.10"
 tokio-postgres = "0.7.13"
+thiserror = "2.0.12"
