--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       - 5432:5432
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: SBz0rg0fOV34VqbC
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgraphql
