--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["http1"] }
+axum = { version = "0.8.4", features = ["http1", "json" ] }
 tokio = { version = "1.45.1", features = ["full"] }
 tower = "0.5.2"
 hyper = "1.6.0"
@@ -15,3 +15,7 @@ postgres = "0.19.10"
 tokio-postgres = "0.7.13"
 thiserror = "2.0.12"
 refinery = { version = "0.8.16", features = ["tokio-postgres"]}
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
+http = "1.3.1"
+serde_json = "1.0.140"
+headers = "0.4.1"
