--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ axum-extra = { version = "0.10.1", features = ["typed-header"] }
 http = "1.3.1"
 serde_json = "1.0.140"
 headers = "0.4.1"
+jsonwebtoken = "9.3.1"
+serde = { version = "1.0.219", features = ["derive"] }
+anyhow = "1.0.98"
