--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ headers = "0.4.1"
 jsonwebtoken = "9.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
 anyhow = "1.0.98"
+sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ] }
