--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 anyhow = "1.0.98"
 sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "mysql" ] }
 async-trait = "0.1.88"
+graphql-parser = "0.4.1"
+regex = "1.11.1"
